Fix text overlap on magic at 400%

--- a/lbitest/stylesheets/responsive_styles.scss
+++ b/lbitest/stylesheets/responsive_styles.scss
@@ -112,7 +112,7 @@
         padding: -30px !important; 
         margin-bottom: -60px; 
       }
-    .border-02-content{ padding-bottom: 20px !important; }
+    .border-02-content{ padding-bottom: 13vh !important; }
 
       
     .bg-magic{
