--- a/lbitest/stylesheets/style.css
+++ b/lbitest/stylesheets/style.css
@@ -777,7 +777,7 @@ h1, h2, h3, h4, h5, p {
     margin-bottom: -60px; }
 
   .border-02-content {
-    padding-bottom: 20px !important; }
+    padding-bottom: 13vh !important; }
 
   .bg-magic {
     background: url(../img/strip-magic-01-m.png) no-repeat 50% 0% #000000 !important;
